<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Doa Sehari Hari</string>
    <string name="top">بِسْمِ اللّهِ الرَّحْمنِ الرَّحِيْمِ</string>
    <string name="action_search">Search</string>
    <string name="action_help">Help</string>
    <string name="action_about">About</string>
    <string name="action_bookmark">Bookmark</string>
    <string name="bookmark_off">Add to Bookmark</string>
    <string name="bookmark_on">Remove from Bookmark</string>
    <string name="help_bookmark">Tap to add or remove selected doa in the Bookmark</string>
    <string name="help_search">Type doa name in order to search doa</string>
    <string name="view">View</string>
    <string name="add">Added to Bookmark</string>
    <string name="remove">Removed from Bookmark</string>
    <string name="empty">Bookmark Empty</string>
    <string name="none">No Match Found</string>
    <string name="about">Copyright \u00A9 2014 - imancha</string>
    <string name="facebook">facebook</string>
    <string name="twitter">twitter</string>
    <string name="email">email</string>

</resources>